2007-10-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c: removed an obsolete comment.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactionview.c
	* app/widgets/gimphelp.c: specify alternative button order for
	message dialogs.

	* app/dialogs/user-install-dialog.c: removed trailing whitespace.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c: implement button_release
	and stop the draw tool when in adjust mode. Fixes bug #483912.

	(gimp_perspective_clone_tool_mode_notify): start the draw tool.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c: cosmetics.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrendererimage.c
	(gimp_view_renderer_image_render): as some kind of workaround for
	bug #459518, show the fallback icon when rendering the preview for
	an invisible channel.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.[ch]: removed level from
	GimpDisplayShell struct.

	* app/display/gimpdisplayshell-render.c: fixed rendering of the mask.
	Closes bug #448417 again.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolorpanel.[ch]: reverted the live update change
	from bug #451568. It causes breakage such as bug #484757.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/config/gimpdisplayconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/display/display-enums.[ch]
	* app/display/gimpdisplayshell-handlers.c
	* app/display/gimpdisplayshell-render.c: allow to configure the
	display zoom quality.

	* app/display/gimpdisplayshell-transform.c: formatting. 

2007-10-08  Raphaël Quinet  <raphael@gimp.org>

	* authors.xml: Added Peter Sikking as author (we do not have a
	more appropriate category for interface architects).

2007-10-07  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.c: use a neutral gray as the
	default out-of-gamut warning color.

2007-10-06  Manish Singh  <yosh@gimp.org>
